gitops/apps/vikunja/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vikunja
  labels:
    name: vikunja
